# qualeus

./: .gitmodules  CMakeLists.txt  README.md  build.bat  build.sh
examples/: CMakeLists.txt  index.html
examples/assets/: asset.hpp.in
examples/demos/: baloon.cpp  base.cpp  cloths.cpp  constraints.cpp  slider.cpp  sponge.cpp  spring.cpp
main/: main.cpp
renderer/: CMakeLists.txt
renderer/assets/: ImGuiDemo.cpp
renderer/assets/fonts/: ReadMe.md  binary_to_compressed_c.cpp  consolas.hpp  forkawersome.hpp  icons.hpp  proggy.hpp  roboto.hpp
renderer/assets/icon/: png_to_compressed_c.cpp  ricon.hpp  ricon.rc
renderer/assets/shaders/: CMakeLists.txt
renderer/assets/shaders/circle/: fs_circle.sc  varying.def.sc  vs_circle.sc
renderer/assets/shaders/circle/fs_shaders/: fs_circle_dx11.bin.hpp  fs_circle_dx9.bin.hpp  fs_circle_essl.bin.hpp  fs_circle_glsl.bin.hpp  fs_circle_metal.bin.hpp
renderer/assets/shaders/circle/vs_shaders/: vs_circle_dx11.bin.hpp  vs_circle_dx9.bin.hpp  vs_circle_essl.bin.hpp  vs_circle_glsl.bin.hpp  vs_circle_metal.bin.hpp
renderer/assets/shaders/default/: fs_base.sc  vs_base.sc
renderer/assets/shaders/default/fs_shaders/: fs_base_dx11.bin.hpp  fs_base_dx9.bin.hpp  fs_base_essl.bin.hpp  fs_base_glsl.bin.hpp  fs_base_metal.bin.hpp
renderer/assets/shaders/default/vs_shaders/: vs_base_dx11.bin.hpp  vs_base_dx9.bin.hpp  vs_base_essl.bin.hpp  vs_base_glsl.bin.hpp  vs_base_metal.bin.hpp
renderer/assets/shaders/grid/: fs_grid.sc  varying.def.sc  vs_grid.sc
renderer/assets/shaders/grid/fs_shaders/: fs_grid_dx11.bin.hpp  fs_grid_dx9.bin.hpp  fs_grid_essl.bin.hpp  fs_grid_glsl.bin.hpp  fs_grid_metal.bin.hpp
renderer/assets/shaders/grid/vs_shaders/: vs_grid_dx11.bin.hpp  vs_grid_dx9.bin.hpp  vs_grid_essl.bin.hpp  vs_grid_glsl.bin.hpp  vs_grid_metal.bin.hpp
renderer/assets/shaders/imgui/: fs_imgui.bin.hpp  vs_imgui.bin.hpp
renderer/assets/shaders/tools/: texturec_lin  texturev_lin
renderer/include/Context/: Inputs.hpp  Renderer.hpp  State.hpp  Window.hpp
renderer/include/Drawing/: Camera.hpp  Shader.hpp  Shapes.hpp
renderer/include/Mesh/: Mesh.hpp  Vertex.hpp  VertexCol.hpp  VertexRef.hpp  VertexTex.hpp
renderer/include/Overlay/: GuiManager.hpp  GuiModule.hpp  ImGuiHelper.hpp  Overlay.hpp
renderer/include/Overlay/Gui/: GuiManager.hpp  GuiModule.hpp  GuiTheme.hpp
renderer/include/Serialization/: FileManager.hpp  Serialization.hpp
renderer/libs/: CMakeLists.txt
renderer/sources/Context/: Inputs.cpp  Renderer.cpp  State.cpp  Window.cpp
renderer/sources/Drawing/: Camera.cpp  Shader.cpp  Shapes.cpp
renderer/sources/Mesh/: Mesh.cpp  Vertex.cpp  VertexCol.cpp  VertexRef.cpp  VertexTex.cpp
renderer/sources/Overlay/: GuiManager.cpp  GuiModule.cpp  GuiTheme.cpp  ImGuiHelper.cpp  Overlay.cpp
renderer/sources/Overlay/Editor/: GuiEditor.cpp
renderer/sources/Overlay/Gui/: GuiManager.cpp  GuiModule.cpp  GuiTheme.cpp
renderer/sources/Overlay/Gui/Popups/: GuiClearSystem.cpp
renderer/sources/Overlay/Gui/Windows/: GuiMenu.cpp  GuiSelection.cpp  GuiSettings.cpp
renderer/sources/Overlay/Popups/: GuiClearSystem.cpp
renderer/sources/Overlay/Windows/: GuiMenu.cpp  GuiSelection.cpp  GuiSettings.cpp  GuiSpawner.cpp  GuiState.cpp
renderer/sources/Serialization/: FileManager.cpp  Serialization.cpp
